--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "primeiro-codigo",
-    "slug": "primeiro-codigo",
+    "name": "Equilibra",
+    "slug": "FinanceApp",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
