--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
   },
   "dependencies": {
     "@expo-google-fonts/montserrat": "^0.4.2",
+    "@expo/html-elements": "^0.10.1",
     "@expo/vector-icons": "^15.0.3",
+    "@gluestack-ui/core": "^3.0.12",
+    "@gluestack-ui/themed": "^1.1.73",
+    "@gluestack-ui/utils": "^3.0.15",
+    "@legendapp/motion": "^2.5.3",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
@@ -29,25 +34,32 @@
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "~15.0.10",
-    "nativewind": "^4.1.23",
+    "lucide-react-native": "^0.563.0",
+    "nativewind": "^4.2.1",
     "react": "19.1.0",
+    "react-aria": "^3.45.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "~4.1.1",
-    "react-native-safe-area-context": "~5.6.0",
+    "react-native-reanimated": "~4.1.0",
+    "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "15.12.1",
+    "react-native-svg": "^15.15.1",
+    "react-native-toast-message": "^2.3.3",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
-    "react-native-worklets": "^0.7.2",
-    "tailwindcss": "^3.4.17"
+    "react-native-worklets": "^0.5.2",
+    "react-stately": "^3.43.0",
+    "tailwind-variants": "^0.1.20"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
+    "prettier-plugin-tailwindcss": "^0.5.14",
+    "tailwindcss": "^3.4.19",
     "typescript": "~5.8.3"
   },
   "private": true
